# drop-packets-bpf

./: Cargo.toml  README.md
.vim/: coc-settings.json
kill-the-devil/: Cargo.toml
kill-the-devil-common/: Cargo.toml
kill-the-devil-ebpf/: Cargo.toml
kill-the-devil-ebpf/src/: main.rs
kill-the-devil/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
