[package]
name = "kill-the-devil"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya.git", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya.git" }
clap = { version = "4.1", features = ["derive"] }
kill-the-devil-common = { path = "../kill-the-devil-common", features = [
    "user",
] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }

[[bin]]
name = "kill-the-devil"
path = "src/main.rs"
